k8s/production/kafka-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kafka-ui
  namespace: chicmoz
spec:
  ingressClassName: nginx
  rules:
    - host: kafka.localhost
      http:
        paths:
          - backend:
              service:
                name: kafka-ui
                port:
                  name: http
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
